changed to grid

--- a/index.html
+++ b/index.html
@@ -26,12 +26,16 @@
     </header>
     <main>
       <h1>Games</h1>
-  
 
       <div class="Products" id="Products">
         <div class="loading-box"><div class="loader"></div></div>
       </div>
     </main>
+    <footer>
+      <div class="github">
+        <div class="git"><i class="fab fa-github"></i></div>
+        <div><a href="https://github.com/fantadiallo">Github</a></div>
+    </div>
   </body>
 
   <script src="js/fetch.js"></script>
