--- a/productdetails.html
+++ b/productdetails.html
@@ -22,9 +22,9 @@
      </nav>
     </header>
     <main>
-        <h1>SUTURA BEADS</h1>
+        <h1>Gamehub</h1>
         <div class="breaddcrumb">
-            <a href="index.html"><i class="fas fa-arrow-left"></i>Back to posts</a>
+            <a href="index.html"><i class="fas fa-arrow-left"> </i>Back to games</a>
           </div>
             <div class="product-details" id="product-details">
               
@@ -34,6 +34,11 @@
                 </div>
             </div>
     </main>
+    <footer>
+        <div class="github">
+          <div class="git"><i class="fab fa-github"></i></div>
+          <div><a href="https://github.com/fantadiallo">Github</a></div>
+      </div>
 </body>
 <script src=js/details.js></script>
 </html>
